# FinanceResearchAgent

./: .env  .env.example  CLAUDE.md  README.md  agent.py  cli.py  main.py  pyproject.toml  run_demo.py
.claude/: settings.local.json
api/: main.py
financeresearchagent/: __init__.py
financeresearchagent/agents/: __init__.py  analyst.py  data_collector.py  main_agent.py  report_generator.py
financeresearchagent/config/: __init__.py  llm_config.py  settings.py
financeresearchagent/models/: __init__.py  analysis.py  report.py  stock.py
financeresearchagent/services/: __init__.py  analysis_service.py  data_service.py  report_service.py
financeresearchagent/tools/: __init__.py  analysis_tools.py  finance_tools.py  market_tools.py  report_tools.py
financeresearchagent/utils/: __init__.py  ssl_fix.py
skills/investment-analysis/: SKILL.md
skills/report-writing/: SKILL.md
skills/risk-management/: SKILL.md
tests/: __init__.py  test_finance_tools.py
www/: index.html
